force-app/main/default/objects/Lead/fields/NOK_Name__c.field-meta.xml
<CustomField>
    <fullName>NOK_Name__c</fullName>
    <label>Next of Kin Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>