force-app/main/default/objects/Lead/fields/NOK_Phone__c.field-meta.xml
<CustomField>
    <fullName>NOK_Phone__c</fullName>
    <label>Next of Kin Phone</label>
    <type>Phone</type>
</CustomField>