force-app/main/default/objects/Lead/fields/NOK_Relationship__c.field-meta.xml
<CustomField>
    <fullName>NOK_Relationship__c</fullName>
    <label>Relationship to Next of Kin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>