force-app/main/default/objects/Lead/fields/NTE_Application_Rejected__c.field-meta.xml
<CustomField>
    <fullName>NTE_Application_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Rejected</label>
    <type>Checkbox</type>
</CustomField>