force-app/main/default/objects/Lead/fields/NTE_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>NTE_Email_Error__c</fullName>
    <label>NTE Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>