force-app/main/default/objects/Lead/fields/NTE_Interest_Progressed__c.field-meta.xml
<CustomField>
    <fullName>NTE_Interest_Progressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Progressed</label>
    <type>Checkbox</type>
</CustomField>