force-app/main/default/objects/Lead/fields/NTE_Invitation_Recipient__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invitation_Recipient__c</fullName>
    <label>NTE Invitation Recipient</label>
    <type>Email</type>
</CustomField>