force-app/main/default/objects/Lead/fields/NTE_Invitation_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invitation_Sent_At__c</fullName>
    <label>NTE Invitation Sent At</label>
    <type>DateTime</type>
</CustomField>