force-app/main/default/objects/Lead/fields/NTE_Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>NTE_Invitation_Status__c</fullName>
    <label>NTE Invitation Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>