force-app/main/default/objects/Lead/fields/NTE_Update_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>NTE_Update_Booking_Id__c</fullName>
    <description>Opportunity ID recorded by the supplementary update service when the update is accepted. Acknowledgement retries use this booking and must never rematch to a different reference.</description>
    <label>Applied NTE Booking ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>