force-app/main/default/objects/Lead/fields/NTE_Update_Error__c.field-meta.xml
<CustomField>
    <fullName>NTE_Update_Error__c</fullName>
    <label>NTE Update Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>