force-app/main/default/objects/Lead/fields/NTE_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>NTE_Update_Status__c</fullName>
    <label>NTE Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Matched and Applied</fullName>
            </value>
            <value>
                <fullName>No Matching Booking</fullName>
            </value>
            <value>
                <fullName>Ambiguous Booking Reference</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>