force-app/main/default/objects/Lead/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charity - COBSEO member</fullName>
            </value>
            <value>
                <fullName>Charity - Non COBSEO member</fullName>
            </value>
            <value>
                <fullName>Government Department or Agency</fullName>
            </value>
            <value>
                <fullName>Industry Body / Trade Association</fullName>
            </value>
            <value>
                <fullName>Employer - Automotive</fullName>
            </value>
            <value>
                <fullName>Employer - Clean Energy</fullName>
            </value>
            <value>
                <fullName>Employer - Blue Light Services / NHS</fullName>
            </value>
            <value>
                <fullName>Employer - Built Environment</fullName>
            </value>
            <value>
                <fullName>Employer - Manufacturing</fullName>
            </value>
            <value>
                <fullName>Employer - Defence and Security</fullName>
            </value>
            <value>
                <fullName>Employer - Financial and Professional Services</fullName>
            </value>
            <value>
                <fullName>Employer - Digital and Technologies</fullName>
            </value>
            <value>
                <fullName>Employer - Training and Education</fullName>
            </value>
            <value>
                <fullName>Employer - Land-based</fullName>
            </value>
            <value>
                <fullName>Employer - Other sector</fullName>
            </value>
            <value>
                <fullName>Commercial business</fullName>
            </value>
            <value>
                <fullName>Charity or non-profit</fullName>
            </value>
            <value>
                <fullName>Government or public body</fullName>
            </value>
            <value>
                <fullName>Industry body or trade association</fullName>
            </value>
            <value>
                <fullName>Education or training provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>