force-app/main/default/objects/Lead/fields/Partner_Interest_Areas__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interest_Areas__c</fullName>
    <label>Partner Interest Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic event partnership</fullName>
            </value>
            <value>
                <fullName>Event zone sponsorship</fullName>
            </value>
            <value>
                <fullName>Stage, content or thought leadership</fullName>
            </value>
            <value>
                <fullName>Branding and delegate experience</fullName>
            </value>
            <value>
                <fullName>Troops&apos; Track Day</fullName>
            </value>
            <value>
                <fullName>Other or not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>