force-app/main/default/objects/Lead/fields/Partner_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interest_Type__c</fullName>
    <label>Partner Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Both - open to discussion</fullName>
            </value>
            <value>
                <fullName>Not sure - I would like advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>