force-app/main/default/objects/Lead/fields/Partnership_Interest_Detail__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Interest_Detail__c</fullName>
    <label>Partnership Interest Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>