force-app/main/default/objects/Lead/fields/Power_Socket_Count__c.field-meta.xml
<CustomField>
    <fullName>Power_Socket_Count__c</fullName>
    <label>Power Socket Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>