force-app/main/default/objects/Lead/fields/Power_Socket_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Power_Socket_Unit_Price__c</fullName>
    <label>Power Socket Unit Price (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>