force-app/main/default/objects/Lead/fields/Previous_NTE_Events__c.field-meta.xml
<CustomField>
    <fullName>Previous_NTE_Events__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Previous NTE Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NTE2024</fullName>
                <label>NTE24</label>
            </value>
            <value>
                <fullName>NTE2025</fullName>
                <label>NTE25</label>
            </value>
            <value>
                <fullName>NTE2026</fullName>
                <label>NTE26</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>