force-app/main/default/objects/Lead/fields/Pricing_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Status__c</fullName>
    <label>Pricing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Review required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>