force-app/main/default/objects/Lead/fields/Pricing_Version__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Version__c</fullName>
    <label>Pricing Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>