force-app/main/default/objects/Lead/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Purchase Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>