force-app/main/default/objects/Lead/fields/Quote_Required_for_PO__c.field-meta.xml
<CustomField>
    <fullName>Quote_Required_for_PO__c</fullName>
    <label>Quotation Required for PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>