force-app/main/default/objects/Lead/fields/Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Email__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Secondary Contact Email</label>
    <type>Email</type>
</CustomField>