force-app/main/default/objects/Lead/fields/Secondary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Name__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Secondary Contact Full Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>