force-app/main/default/objects/Lead/fields/Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Phone__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Secondary Contact Work Phone</label>
    <type>Phone</type>
</CustomField>