force-app/main/default/objects/Lead/fields/Secondary_Contact_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Prefix__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Secondary Contact Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>