force-app/main/default/objects/Lead/fields/Secondary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Title__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Secondary Contact Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>