force-app/main/default/objects/Lead/fields/Sponsor_Package_Total__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Package_Total__c</fullName>
    <label>Sponsor Package Total (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>