force-app/main/default/objects/Lead/fields/Sponsored_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Name__c</fullName>
    <description>Name of person applying for sponsorship.</description>
    <label>Sponsored Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>