force-app/main/default/objects/Lead/fields/Staff_Base_Names__c.field-meta.xml
<CustomField>
    <fullName>Staff_Base_Names__c</fullName>
    <label>Staff Names Covered by Booking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>