force-app/main/default/objects/Lead/fields/Staff_Update_Audience__c.field-meta.xml
<CustomField>
    <fullName>Staff_Update_Audience__c</fullName>
    <label>Staff Update Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Partner / sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>