force-app/main/default/objects/Lead/fields/Stand_Colleagues__c.field-meta.xml
<CustomField>
    <fullName>Stand_Colleagues__c</fullName>
    <label>Stand Colleagues</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>