force-app/main/default/objects/Lead/fields/Stand_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Stand_Equipment__c</fullName>
    <label>Stand Equipment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>