force-app/main/default/objects/Lead/fields/Stand_Extra_Notes__c.field-meta.xml
<CustomField>
    <fullName>Stand_Extra_Notes__c</fullName>
    <label>Stand Extra Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>