force-app/main/default/objects/Lead/fields/Stand_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Stand_Special_Requirements__c</fullName>
    <label>Stand Special Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>