force-app/main/default/objects/Lead/fields/Supplier_Agreement_Required__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Agreement_Required__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Supplier Agreement Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>