force-app/main/default/objects/Lead/fields/Target_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Target_Booking_Reference__c</fullName>
    <description>Exact original booking reference supplied on an NTE supplementary form.</description>
    <label>Target NTE Booking Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>