force-app/main/default/objects/Lead/fields/Top_Up_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Staff_Count__c</fullName>
    <label>Top-up Staff Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>