force-app/main/default/objects/Lead/fields/Top_Up_Staff_Names__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Staff_Names__c</fullName>
    <label>Top-up Staff Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>