force-app/main/default/objects/Lead/fields/Top_Up_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Staff_Required__c</fullName>
    <label>Top-up Staff Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>