force-app/main/default/objects/Lead/fields/Top_Up_Staff_Total__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Staff_Total__c</fullName>
    <label>Top-up Staff Total (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>