force-app/main/default/objects/Lead/fields/Top_Up_Total_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Total_Inc_VAT__c</fullName>
    <formula>BLANKVALUE(Top_Up_Staff_Total__c, 0) + Top_Up_VAT_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Top-up Total (inc VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>