force-app/main/default/objects/Lead/fields/Top_Up_VAT_Total__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_VAT_Total__c</fullName>
    <formula>ROUND(BLANKVALUE(Top_Up_Staff_Total__c, 0) * BLANKVALUE(VAT_Rate__c, 20) / 100, 2)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Top-up VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>