force-app/main/default/objects/Lead/fields/Total_Including_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Including_VAT__c</fullName>
    <label>Booking Total (inc VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>