force-app/main/default/objects/Lead/fields/Total_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Staff_Count__c</fullName>
    <label>Total Staff Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>