force-app/main/default/objects/Lead/fields/VAT_Total__c.field-meta.xml
<CustomField>
    <fullName>VAT_Total__c</fullName>
    <label>Booking VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>