force-app/main/default/objects/Lead/fields/Volunteer_Applicant_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Applicant_Email_Status__c</fullName>
    <label>Volunteer Applicant Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted by Salesforce</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>