force-app/main/default/objects/Lead/fields/Volunteer_Availability__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Availability__c</fullName>
    <label>Volunteer Availability Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekdays</fullName>
            </value>
            <value>
                <fullName>Weekends</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>