force-app/main/default/objects/Lead/fields/Volunteer_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Email_Error__c</fullName>
    <label>Volunteer Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>