force-app/main/default/objects/Lead/fields/Volunteer_Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Form_Version__c</fullName>
    <label>Volunteer Form Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>