force-app/main/default/objects/Lead/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <label>Hours Willing to Give per Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-4</fullName>
            </value>
            <value>
                <fullName>4-8</fullName>
            </value>
            <value>
                <fullName>8-16</fullName>
            </value>
            <value>
                <fullName>16+</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>