force-app/main/default/objects/Lead/fields/Volunteer_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Opportunities__c</fullName>
    <label>Volunteering Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Transport and Logistics</fullName>
            </value>
            <value>
                <fullName>Motorsport Event Support</fullName>
            </value>
            <value>
                <fullName>Marshalling</fullName>
            </value>
            <value>
                <fullName>Community Outreach / Awareness</fullName>
            </value>
            <value>
                <fullName>Professional Skills</fullName>
            </value>
            <value>
                <fullName>Mentoring &amp; Coaching</fullName>
            </value>
            <value>
                <fullName>Team Area Co-Ordinator</fullName>
            </value>
            <value>
                <fullName>Vehicle Maintenance / Repairs (Wantage)</fullName>
            </value>
            <value>
                <fullName>Pop up shop</fullName>
            </value>
            <value>
                <fullName>Storekeeping (Wantage)</fullName>
            </value>
            <value>
                <fullName>Maintenance / DIY (Wantage)</fullName>
            </value>
            <value>
                <fullName>Driving / Transport</fullName>
                <isActive>false</isActive>
                <label>Driving / Transport</label>
            </value>
            <value>
                <fullName>Charity Merchandise / Shop Support</fullName>
                <isActive>false</isActive>
                <label>Charity Merchandise / Shop Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>