force-app/main/default/objects/Lead/fields/Volunteer_Service_Dates__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Service_Dates__c</fullName>
    <label>Dates in Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>